<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_summ"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="bettasleep.monica.com.bettasleep.SummActivity"
    tools:showIn="@layout/activity_summ">

    <TextView
        android:id="@+id/headline"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sleep_summary"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_marginBottom="25dp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sleep_well_summ"
                android:textSize="30sp"
                android:textColor="@color/colorPrimary"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/y"
                android:textColor="@color/green"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/n"
                android:textColor="@color/colorNo"
                android:textSize="40sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:layout_marginBottom="25dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/quality"
                android:textSize="30sp"
                android:textColor="@color/colorPrimaryDark"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_weight="0.5"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/Z1"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginEnd="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/bold_z"
                android:src="@drawable/bold_z" />

            <ImageView
                android:id="@+id/Z2"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginEnd="0dp"
                android:layout_marginStart="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/bold_z"
                android:src="@drawable/bold_z" />

            <ImageView
                android:id="@+id/Z3"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginEnd="0dp"
                android:layout_marginStart="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/bold_z"
                android:src="@drawable/bold_z" />

            <ImageView
                android:id="@+id/Z4"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginEnd="0dp"
                android:layout_marginStart="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/dashed_Z"
                android:src="@drawable/dashed_z_darker" />

            <ImageView
                android:id="@+id/Z5"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginEnd="0dp"
                android:layout_marginStart="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/dashed_Z"
                android:src="@drawable/dashed_z_darker" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/time_in_rem"
            android:textSize="30sp"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/rem_val"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/deep_sleep"
            android:textSize="30sp"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/deep_sleep_val"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/light_sleep"
            android:textSize="30sp"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/light_sleep_val"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:textColor="@color/black"/>

    </LinearLayout>


</LinearLayout>
