<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="bettasleep.monica.com.bettasleep.RecordActivity"
    tools:showIn="@layout/activity_record">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/webButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:background="@color/colorWebButton"
            android:text="@string/web"
            android:onClick="buttonSelected"
            style="?android:attr/buttonBarStyle"/>

        <Button
            android:id="@+id/recButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginStart="5dp"
            android:background="@color/colorRecordButton"
            android:text="@string/record"
            android:onClick="buttonSelected"
            style="?android:attr/buttonBarStyle"/>

        <Button
            android:id="@+id/summButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginStart="5dp"
            android:background="@color/colorSummButton"
            android:text="@string/summary"
            android:onClick="buttonSelected"
            style="?android:attr/buttonBarStyle"/>

        <Button
            android:id="@+id/instButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginStart="5dp"
            android:background="@color/colorInstButton"
            android:text="@string/instructions"
            android:onClick="buttonSelected"
            style="?android:attr/buttonBarStyle"/>

    </LinearLayout>
</RelativeLayout>
