<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_inst"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="bettasleep.monica.com.bettasleep.InstActivity"
    tools:showIn="@layout/activity_inst">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:contentDescription="@string/betta_sleep_logo"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/about"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/instructionsText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_paragraph"
                android:textAlignment="center"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>